objects/Customer_Part_Number__c.object
<CustomObject>
    <description>List of Customer specific part numbers for each Product.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Part Numbers</relationshipLabel>
        <relationshipName>Customer_Part_Numbers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Danfoss_Material_Number__c</fullName>
        <formula>Product__r.SAP_Material_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Danfoss Material Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Number__c</fullName>
        <label>Customer Material Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Customer Part Numbers</relationshipLabel>
        <relationshipName>Customer_Part_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_Customer_Material_Id__c</fullName>
        <description>Unique key reference for integration.
&lt;Sales org&gt;-&lt;Account Id&gt;-&lt;Productid&gt; combination</description>
        <externalId>true</externalId>
        <label>SAP Customer Material Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Org</label>
        <referenceTo>Sales_Org__c</referenceTo>
        <relationshipLabel>Customer Part Numbers</relationshipLabel>
        <relationshipName>Customer_Part_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDeleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Customer Part Number</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>SAP_Customer_Material_Id__c</columns>
        <columns>Sales_Org__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CPR-{0000000}</displayFormat>
        <label>Customer Part Number Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Part Numbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>